SearchContext: use extra-natural word for non-regex word boundaries

So that a word can contain underscores.

https://bugzilla.gnome.org/show_bug.cgi?id=745790